# fantasy_football_predicter

./: .env.example  .gitignore  README.md  Start Fourth Down.bat  docker-compose.yml  netlify.toml  start.ps1
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  advanced.py  demo.py  domain.py  engine.py  errors.py  live_providers.py  main.py  persistence.py  prompting.py  providers.py  security.py
backend/fourth_down_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_engine.py  test_security_boundaries.py
docs/: AUDIT.md
frontend/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
frontend/app/: globals.css  layout.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts
frontend/app/connect/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/data-sources/: page.tsx
frontend/app/draft/: page.tsx
frontend/app/lineup/: page.tsx
frontend/app/methodology/: page.tsx
frontend/app/players/: page.tsx
frontend/app/players/[playerId]/: page.tsx
frontend/app/power-rankings/: page.tsx
frontend/app/privacy/: page.tsx
frontend/app/reports/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/standings-projection/: page.tsx
frontend/app/trades/: page.tsx
frontend/app/trust/: page.tsx
frontend/app/waivers/: page.tsx
frontend/app/what-if/: page.tsx
frontend/components/: AdvancedPages.tsx  DecisionPages.tsx  PrivacyPage.tsx  ServiceWorker.tsx  Shell.tsx
frontend/lib/: api.ts
frontend/public/: sw.js
